商品詳細情報API作成
